<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MoneyDo</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="hello_world">Hello world!</string>
    <string name="Planned_Income">Planned Income</string>
    <string name="Planned_Outcome">Planned Outcome</string>
    <string name="Needed_Money">Needed Money</string>
    <string name="add_entry">Add Entry</string>
    <string name="availablemoney">Available Money</string>
    <string name="cancel">Cancel</string>
    <string name="spend_money">Spend Money</string>
 	<string name="day_end">Dayly outcome Change</string>
    	<string name="you_have">You have free amount of money:</string>
    		<string name="spend_some">Do you spend some money today?</string>
    		<string name="reminderTime">Time Of Reminder</string>
    		<string name="save">Save</string>
</resources>
