<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/SaveSettingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="32dp"
        android:onClick="saveSetting"
        android:text="@string/save" />

    <Button
        android:id="@+id/CancelSettingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/SaveSettingBtn"
        android:layout_alignBottom="@+id/SaveSettingBtn"
        android:layout_alignParentRight="true"
        android:onClick="cancel"
        android:text="@string/cancel" />

    <TimePicker
        android:id="@+id/timeOFNotifyPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reminderTime"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
